Fixed overflowing picture and added colors

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -7,7 +7,16 @@
 .content_card{
   padding-top: 10px;
   width: 350px;
-  height: 350px;
-  background-color:#70B8E8 ;
+  height: fit-content;
+  background-color:#A7E195;
+  font-weight: 400;
 
+}
+
+.card{
+  align-items: center;
+  img{
+    max-width: 280px;
+    max-height: 280px;
+  }
 }
